--- a/src/style.scss
+++ b/src/style.scss
@@ -28,7 +28,7 @@ span {
 }
 
 body {
-  width           : 100%;
+  max-width           : 100%;
   height          : 100vh;
   display         : flex;
   flex-wrap       : wrap;
